[package]
name = "curseofsubit-cli-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curseofrust = { path = "..", package = "curseofsubit" }
clap_lex = "0.7.1"

[features]
net-proto = []

[[bin]]
name = "curseofrust"
path = "src/main.rs"
